content and styling

--- a/home/templates/content_apps.html
+++ b/home/templates/content_apps.html
@@ -2,5 +2,9 @@
 {#<div class="text-center">#}
 <div>
     <p class="mb-4">Link to apps</p>
+    <p class="mb-12">Click the button below to leave essential feedback <3 <br></p>
 
+   <a href="https://docs.google.com/forms/d/e/1FAIpQLSdY-47uxOUANZuhomPVOgpUB0AwSlub6MsPOWby1zcOukHhhg/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" class="text-[#c3ecfa] bg-[#2c9ac0] hover:bg-[#37c1f0] font-bold py-2 px-4 rounded">
+        Feedback Form
+    </a>
 </div>
