--- a/home/templates/logged_in_home.html
+++ b/home/templates/logged_in_home.html
@@ -10,22 +10,22 @@
             <!-- Tab headers -->
             <div class="border-b-2 border-blue-500">
                 <nav class="flex flex-row justify-between">
-                    <button class="tab text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none" data-target="landing">
+                    <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-blue-500 focus:outline-none" data-target="landing">
                         Landing
                     </button>
-                    <button class="tab text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none" data-target="framework">
+                    <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-blue-500 focus:outline-none" data-target="framework">
                         Framework
                     </button>
-                    <button class="tab text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none" data-target="apps">
-                        Apps
+                    <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-blue-500 focus:outline-none" data-target="apps">
+                        Applications
                     </button>
-                    <button class="tab text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none" data-target="faqs">
+                    <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-blue-500 focus:outline-none" data-target="faqs">
                         FAQs
                     </button>
-                    <button class="tab text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none" data-target="profile">
+                    <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-blue-500 focus:outline-none" data-target="profile">
                         Profile
                     </button>
-                    <button class="tab text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none" data-target="worlds">
+                    <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-blue-500 focus:outline-none" data-target="worlds">
                         Worlds
                     </button>
                 </nav>
