--- a/home/templates/content_FAQs.html
+++ b/home/templates/content_FAQs.html
@@ -1,6 +1,6 @@
 <!-- content_faqs.html -->
 {#<div class="text-center">#}
 <div>
-    <p class="mb-4">FAQs</p>
+    <p class="mb-4">FAQs to Follow</p>
 
 </div>
