--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -8,15 +8,15 @@
         <form method="post" action="{% url 'login' %}" class="text-center">
             {% csrf_token %}
              {% crispy form %}
-            <div class="text-center my-4">
-                <a href="{% url 'account_reset_password' %}"
-                   class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800">
-                    Forgot Password
-                </a>
-            </div>
+{#            <div class="text-center my-4">#}
+{#                <a href="{% url 'account_reset_password' %}"#}
+{#                   class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800">#}
+{#                    Forgot Password#}
+{#                </a>#}
+{#            </div>#}
 
             <!-- Signup Button -->
-            <div class="text-center my-4">
+           <div class="text-center mt-8">
                 <a href="{% url 'account_signup' %}"
                    class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800">
                     Create Account
