--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -1,11 +1,22 @@
 <!-- content_framework.html -->
 {#<div class="text-center">#}
 <div>
-    <p class="mb-4">OnlyWorlds is a platform that maintains, and operates on, an open source data format</p>
-    <p class="mb-4">This data format aims to represent fictional or historical worlds </p>
-    <p class="mb-4">Each such world is a snapshot at a specific point in time, and given body through its world Elements</p>
-    <p class="mb-4">These Elements, of 18 categories, have attributes that can be customized, linked, and operated on as digital objects</p>
-    <p class="mb-4">So that a world might be constructed in a writing app, sent to a map making tool, then used in games or simulation software </p>
+        <h2 class="text-2xl font-bold mb-4">Key Goals</h2>
+              <p class="mb-4">1. Provide a data structure, or blueprint, for how worlds are defined </p>
+              <p class="mb-4">2. Allow users to build any kind of (fictional, history) worlds using this blueprint  </p>
+              <p class="mb-4">3. Make these world files transferable across tools, games, devices and web </p>
 
+
+
+   <h4 class="text-2xl font-bold mb-4">Philosophy</h4>
+
+
+          <p class="mb-4">  1. The data structure is open source, free to use, and community-defined</p>
+
+          <p class="mb-4">  2. Users keep full ownership and control over their world data and any publishing choices</p>
+          <p class="mb-4">  3. Allow other developers to build tools on the framework, with any pricing model</p>
+
+         <p class="mb-4">  4. Offer core OnlyWorlds applications (one mobile, one desktop, one web) for free and fully functional</p>
+          <p class="mb-4">  5. Promote collaborative development on the framework, its tools, and worlds themselves</p>
 
 </div>
