--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -1,8 +1,8 @@
 <!-- content_landing.html -->
 {#<div class="text-center">#}
 <div>
-    <h2 class="text-2xl font-bold mb-4">Welcome to this OnlyWorlds pre-alpha release</h2>
-    <p class="mb-4">This initial launch is for essential technical testing ahead of a wider release in April</p>
-    <p class="mb-4">Go to Applications to find a mobile app for android and iOs</p>
+    <h2 class="text-2xl font-bold mb-4">Welcome to OnlyWorlds</h2>
+    <p class="mb-4">Click on the links below to access Android or iOs versions of the OnlyWorlds Companion app</p>
+        <p class="mb-4">More information and a feedback form are in the Applications tab</p>
 
 </div>
