--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -10,7 +10,7 @@
         <div class="bg-gray-800 bg-opacity-75 rounded-lg p-4 shadow-xl">
             <h1 class="text-5xl font-bold text-[#37C1F0] mb-2">OnlyWorlds</h1>
             <p class="text-lg italic px-4 md:px-6 py-2">
-                A framework for world building with an open source data format<br>
+                A framework for world building on an open source data format<br>
                 For world creation, display and simulation across tools, games, apps, and web
             </p>
         </div>
@@ -42,7 +42,7 @@
                 {% endfor %}
                 <button type="submit"
                         class="w-full flex justify-center py-2 px-4 border border-transparent shadow-sm text-lg font-medium rounded-md text-[#c3ecfa] bg-[#2c9ac0] hover:bg-[#37c1f0] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-700">
-                    Submit Interest
+                    Request Access
                 </button>
             </form>
         </div>
