--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -2,7 +2,14 @@
 {#<div class="text-center">#}
 <div>
     <h2 class="text-2xl font-bold mb-4">Welcome to OnlyWorlds</h2>
-    <p class="mb-4">Click on the links below to access Android or iOs versions of the OnlyWorlds Companion app</p>
-        <p class="mb-4">More information and a feedback form are in the Applications tab</p>
-
+    <p class="mb-4">See Framework and Applications for what's on offer</p>
+        <p class="mb-4"><br><br></p>
+    <div class="flex flex-col items-center gap-4 mt-4">
+        <a href="[https://testflight.apple.com/join/bXvUExCL]" class="px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 md:py-4 md:text-lg md:px-10" target="_blank" rel="noopener noreferrer">
+            iOS Testflight
+        </a>
+        <a href="[https://drive.google.com/file/d/1PLUr4Sh8hQ5xWBXKk3sJC0NI-QZsCkPf/view?usp=sharing]" class="px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-green-600 hover:bg-green-700 md:py-4 md:text-lg md:px-10" target="_blank" rel="noopener noreferrer">
+            Android APK
+        </a>
+    </div>
 </div>
