--- a/home/templates/content_apps.html
+++ b/home/templates/content_apps.html
@@ -2,9 +2,9 @@
 {#<div class="text-center">#}
 <div>
     <p class="mb-4">The OnlyWorlds Companion app lets you define a world, create and configure elements in it, follow a progression system that aims to gamify and explain processes, and chat with AI agents that have some specialized world building skills</p>
-    <p class="mb-4">This app is now in pre-alpha release mode, where the major systems are largely in place, and technical issues might be logged</p>
-
-    <p class="mb-12">When you've given it enough of a try, please click the button below to leave essential feedback <3 <br></p>
+    <p class="mb-4">Now in alpha release phase one see if it all sticks together</p>
+    <p class="mb-4">There's lots of writing and rewriting to be done on the progression system so please log any suggestions</p>
+    <p class="mb-12">And use form below to leave essential feedback <3 <br></p>
 
    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdY-47uxOUANZuhomPVOgpUB0AwSlub6MsPOWby1zcOukHhhg/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" class="text-[#c3ecfa] bg-[#2c9ac0] hover:bg-[#37c1f0] font-bold py-2 px-4 rounded">
         Feedback Form
