--- a/home/templates/content_framework.html
+++ b/home/templates/content_framework.html
@@ -1,22 +1,16 @@
 <!-- content_framework.html -->
 {#<div class="text-center">#}
 <div>
-        <h2 class="text-2xl font-bold mb-4">Key Goals</h2>
-              <p class="mb-4">1. Provide a data structure, or blueprint, for how worlds are defined </p>
-              <p class="mb-4">2. Allow users to build any kind of (fictional, history) worlds using this blueprint  </p>
-              <p class="mb-4">3. Make these world files transferable across tools, games, devices and web </p>
+        <h2 class="text-2xl font-bold mb-4">Structural Goals</h2>
+              <p class="mb-4">1. Provide a data structure blueprint for capturing worlds and their content </p>
+              <p class="mb-4">2. Allow building of any fictional / history worlds with blueprint  </p>
+              <p class="mb-4">3. Make world files transferable across tools, games, devices and web </p>
 
-
-
-   <h4 class="text-2xl font-bold mb-4">Philosophy</h4>
-
-
-          <p class="mb-4">  1. The data structure is open source, free to use, and community-defined</p>
-
-          <p class="mb-4">  2. Users keep full ownership and control over their world data and any publishing choices</p>
-          <p class="mb-4">  3. Allow other developers to build tools on the framework, with any pricing model</p>
-
-         <p class="mb-4">  4. Offer core OnlyWorlds applications (one mobile, one desktop, one web) for free and fully functional</p>
-          <p class="mb-4">  5. Promote collaborative development on the framework, its tools, and worlds themselves</p>
+   <h4 class="text-2xl font-bold mb-4">Intent</h4>
+          <p class="mb-4">  1. Core data structures are open source, free to use, and community-driven/p>
+          <p class="mb-4">  2. Users keep full ownership and control over their world data and visibility</p>
+          <p class="mb-4">  3. Allow any developers and artists to build into the framework, on whatever pricing model</p>
+          <p class="mb-4">  4. Promote collaborative development on the framework, its tools, its worlds</p>
+         <p class="mb-4">  5. Core OnlyWorlds applications are always free:  1 mobile, 1 desktop, 1 web</p>
 
 </div>
