--- a/home/templates/logged_in_home.html
+++ b/home/templates/logged_in_home.html
@@ -11,7 +11,7 @@
             <div class="border-b-2 border-blue-500">
                 <nav class="flex flex-row justify-between">
                     <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-blue-500 focus:outline-none" data-target="landing">
-                        Landing
+                        Home
                     </button>
                     <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-blue-500 focus:outline-none" data-target="framework">
                         Framework
