--- a/home/templates/content_profile.html
+++ b/home/templates/content_profile.html
@@ -1,6 +1,6 @@
 <!-- content_profile.html -->
 {#<div class="text-center">#}
 <div>
-    <p class="mb-4">You have a profile, it's just not here yet</p>
+    <p class="mb-4">Profile is UNloaded</p>
 
 </div>
