--- a/home/templates/content_landing.html
+++ b/home/templates/content_landing.html
@@ -1,13 +1,13 @@
 <!-- content_landing.html -->
 <div>
     <h2 class="text-2xl font-bold mb-4">Welcome to OnlyWorlds</h2>
-    <p class="mb-4">Try the companion app below</p>
+    <p class="mb-4">Try a brand new app below</p>
             <p class="mb-4"><br><br></p>
     <div class="flex flex-col items-center gap-4 mt-4">
         <a href="https://testflight.apple.com/join/bXvUExCL" class="px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 md:py-4 md:text-lg md:px-10" target="_blank" rel="noopener noreferrer">
             iOS Testflight
         </a>
-        <a href="https://drive.google.com/file/d/1PLUr4Sh8hQ5xWBXKk3sJC0NI-QZsCkPf/view?usp=sharing" class="px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-green-600 hover:bg-green-700 md:py-4 md:text-lg md:px-10" target="_blank" rel="noopener noreferrer">
+        <a href="https://drive.google.com/file/d/1PCQm_jkkaH-2fFjGT4m1L0lYOUdvSHfB/view?usp=sharing" class="px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-green-600 hover:bg-green-700 md:py-4 md:text-lg md:px-10" target="_blank" rel="noopener noreferrer">
             Android APK
         </a>
     </div>
