--- a/home/templates/logged_in_home.html
+++ b/home/templates/logged_in_home.html
@@ -27,7 +27,10 @@
                     </button>
                     <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-blue-500 focus:outline-none" data-target="worlds">
                         Worlds
-                    </button>
+{#                    </button>#}
+{#                            <button class="tab text-gray-500 py-4 px-6 font-bold block hover:text-blue-500 focus:outline-none" data-target="policy">#}
+{#                        Privacy Policy#}
+{#                    </button>#}
                 </nav>
             </div>
 
@@ -55,7 +58,11 @@
            <div class="tab-content text-white p-4" id="worlds" style="display: none;">
                 <!-- Include your worlds content here -->
                  {% include 'content_worlds.html' %}
-            </div>
+{#            </div>#}
+{#                  <div class="tab-content text-white p-4" id="policy" style="display: none;">#}
+{#                <!-- Include your worlds content here -->#}
+{#                 {% include 'policy.html' %}#}
+{#            </div>#}
             <!-- More tab contents here -->
 
         </div>
