--- a/templates/policy.html
+++ b/templates/policy.html
@@ -5,7 +5,11 @@
     <title>Title</title>
 </head>
 <body>
+<div class="bg-black min-h-screen text-white">
 <style>
+      body {
+      background-color: #000; /* Set the body background to black */
+  }
   [data-custom-class='body'], [data-custom-class='body'] * {
           background: transparent !important;
         }
@@ -58,10 +62,7 @@ word-break: break-word !important;
         font-family: Arial ;
       }
     </style>
-      </div>
-      <div style="color: #595959;font-size: 14px;font-family: Arial;padding-top:16px;">
-      This privacy policy was created using Termly's <a style="color: rgb(48, 48, 241) !important;" href="https://termly.io/products/privacy-policy-generator/">Privacy Policy Generator</a>.
-      </div>
+
 </body>
 </html>
 
