foldouts in framework

--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -11,7 +11,7 @@
             <h1 class="text-5xl font-bold text-[#37C1F0] mb-2">OnlyWorlds</h1>
             <p class="text-lg italic px-4 md:px-6 py-2">
                 A framework for world building on an open source data format<br>
-                For world creation, display and simulation across tools, games, apps, and web
+                For world creation, display and simulation; across tools, games, apps, and web
                 <br><br><br>     </p>
                    <p class="text-m  px-4 md:px-6 py-2">
                 Now in closed alpha for data structure feedback, using: <br>      </p>
@@ -19,7 +19,7 @@
         <li>An android/iOs companion app</li>
         <li>A Unity Editor maps & pins tool</li>
         <li>A Unity WebGL explorer tool</li>
-        <li>An API to transfer worlds across</li>
+        <li>An API for world export and import across these apps</li>
     </ul>
 
         </div>
