copy to apps section

--- a/home/templates/content_apps.html
+++ b/home/templates/content_apps.html
@@ -1,12 +1,78 @@
 <!-- content_apps.html -->
 {#<div class="text-center">#}
-<div>
-    <p class="mb-4">The OnlyWorlds Companion app lets you define a world, create and configure elements in it, follow a progression system that aims to gamify and explain processes, and chat with AI agents that have some specialized world building skills</p>
-    <p class="mb-4">Now in alpha release phase one see if it all sticks together</p>
-    <p class="mb-4">There's lots of writing and rewriting to be done on the progression system so please log any suggestions</p>
-    <p class="mb-12">And use form below to leave essential feedback <3 <br></p>
 
-   <a href="https://docs.google.com/forms/d/e/1FAIpQLSdY-47uxOUANZuhomPVOgpUB0AwSlub6MsPOWby1zcOukHhhg/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" class="text-[#c3ecfa] bg-[#2c9ac0] hover:bg-[#37c1f0] font-bold py-2 px-4 rounded">
+<!-- content_framework.html -->
+{#<div class="text-center">#}
+
+
+<div class="mb-4" id="accordion-collapse11" data-accordion="collapse">
+ <h2 id="accordion-collapse-heading-11" class="mb-4">
+    <button type="button" class="text-white text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-11" aria-expanded="false" aria-controls="accordion-collapse-body-11">
+      Companion App: android / iOs
+      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+    </button>
+</h2>
+  <div id="accordion-collapse-body-11" class="hidden" aria-labelledby="accordion-collapse-heading-11">
+     <div class="p-1 border border-gray-200 dark:border-gray-700 rounded-b-lg ">
+        <p class="mb-2">The OnlyWorlds Companion app lets you define a world, create and configure elements in it, follow a progression system that aims to gamify and explain processes, and chat with AI agents that have some specialized world building skills</p>
+    <p class="mb-2">Now in alpha release phase one</p>
+    <p class="mb-8">There's lots of writing and rewriting to be done on the progression system so any feedback is welcome</p>
+
+   <a href="https://docs.google.com/forms/d/e/1FAIpQLSdY-47uxOUANZuhomPVOgpUB0AwSlub6MsPOWby1zcOukHhhg/viewform?usp=sf_link" target="_blank" rel="noopener noreferrer" class="mb-4 text-[#c3ecfa] bg-[#2c9ac0] hover:bg-[#37c1f0] font-bold py-2 px-4 rounded">
         Feedback Form
     </a>
+
+    </div>
+  </div>
 </div>
+
+
+<div class="mb-4"  id="accordion-collapse12" data-accordion="collapse">
+ <h2 id="accordion-collapse-heading-12" class="mb-4">
+    <button type="button" class="text-white text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-12" aria-expanded="false" aria-controls="accordion-collapse-body-12">
+      Mapper: Desktop (Unity)
+      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+    </button>
+</h2>
+  <div id="accordion-collapse-body-12" class="hidden" aria-labelledby="accordion-collapse-heading-12">
+     <div class="p-1 border border-gray-200 dark:border-gray-700 rounded-b-lg ">
+
+   <p class="mb-2">1. Text</p>
+      <p class="mb-2">2. Text</p>
+    </div>
+  </div>
+</div>
+
+<div class="mb-4"  id="accordion-collapse13" data-accordion="collapse">
+ <h2 id="accordion-collapse-heading-13" class="mb-4">
+    <button type="button" class="text-white text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-13" aria-expanded="false" aria-controls="accordion-collapse-body-13">
+       Explorer: Desktop & Web (Unity)
+      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+    </button>
+</h2>
+
+  <div id="accordion-collapse-body-13" class="hidden" aria-labelledby="accordion-collapse-heading-13">
+    <div class="p-1 border border-gray-200 dark:border-gray-700 rounded-b-lg ">
+      <p class="mb-2">1. Text</p>
+      <p class="mb-2">2. Text</p>
+    </div>
+  </div>
+</div>
+
+{#<div class="mb-4"  id="accordion-collapse4" data-accordion="collapse">#}
+{# <h2 id="accordion-collapse-heading-4" class="mb-4">#}
+{#    <button type="button" class="text-white text-2xl font-bold rounded-lg px-5 py-3 text-left inline-flex items-center w-full justify-between" data-accordion-target="#accordion-collapse-body-4" aria-expanded="false" aria-controls="accordion-collapse-body-4">#}
+{#       Current Version: 0.14.30#}
+{#      <svg data-accordion-icon class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>#}
+{#    </button>#}
+{#</h2>#}
+{##}
+{#  <div id="accordion-collapse-body-4" class="hidden" aria-labelledby="accordion-collapse-heading-4">#}
+{#    <div class="p-1 border border-gray-200 dark:border-gray-700 rounded-b-lg ">#}
+{#      <p class="mb-2">1. Text</p>#}
+{#      <p class="mb-2">2. Text</p>#}
+{#    </div>#}
+{#  </div>#}
+{#</div>#}
+
+
